--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,19 @@
     <packaging>jar</packaging>
     <dependencies>
         <dependency>
-            <groupId>mariadb</groupId>
-            <artifactId>mariabd</artifactId>
-            <version>3.0.11</version>
+            <groupId>org.mariadb.jdbc</groupId>
+            <artifactId>mariadb-java-client</artifactId>
+            <version>3.0.10</version>
+        </dependency>
+        <dependency>
+            <groupId>com.toedter</groupId>
+            <artifactId>jcalendar</artifactId>
+            <version>1.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.1.0</version>
         </dependency>
     </dependencies>
     <properties>
